--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "mongoose": "^8.0.2",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
